--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,27 +5,25 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "hyperhttp"
 version = "0.1.0"
-description = "High-performance HTTP client library for Python"
+description = "A high-performance HTTP client for Python"
 readme = "README.md"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Latiful Mousom", email = "latifulmousom@gmail.com"}
 ]
 license = {text = "MIT"}
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
-    "Topic :: Internet :: WWW/HTTP",
-    "Topic :: Software Development :: Libraries",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 dependencies = [
-    "h2>=4.0.0",
+    "h2>=4.1.0",
 ]
 
 [project.optional-dependencies]
@@ -49,21 +47,50 @@ doc = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/yourusername/hyperhttp"
-"Bug Tracker" = "https://github.com/yourusername/hyperhttp/issues"
-"Documentation" = "https://yourusername.github.io/hyperhttp"
+"Homepage" = "https://github.com/lmousom/hyperhttp"
+"Bug Tracker" = "https://github.com/lmousom/hyperhttp/issues"
+"Documentation" = "https://github.com/lmousom/hyperhttp/blob/main/README.md"
+"Source Code" = "https://github.com/lmousom/hyperhttp"
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310", "py311"]
+target-version = ["py37", "py38", "py39", "py310", "py311"]
 
 [tool.isort]
 profile = "black"
 line_length = 88
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.7"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+
+[tool.pytest.ini_options]
+addopts = "--cov=hyperhttp --cov-report=term-missing --cov-report=html"
+testpaths = ["tests"]
+asyncio_mode = "auto"
+
+[tool.coverage.run]
+branch = true
+source = ["hyperhttp"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "pass",
+    "raise ImportError",
+]
+ignore_errors = true
+omit = [
+    "tests/*",
+    "setup.py",
+]
+
+[tool.coverage.html]
+directory = "coverage_html"
