--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_description: A high-performance HTTP client library for Python
 site_author: Latiful Mousom
 repo_url: https://github.com/lmousom/hyperhttp
 repo_name: lmousom/hyperhttp
+edit_uri: edit/main/docs/
 
 theme:
   name: material
@@ -27,23 +28,30 @@ theme:
     - navigation.top
     - search.suggest
     - search.highlight
+    - content.code.copy
   icon:
     repo: fontawesome/brands/github
 
 plugins:
   - search
   - mkdocstrings:
-      default_handler: python
       handlers:
         python:
-          rendering:
-            show_source: true
-          selection:
+          paths: [hyperhttp]
+          options:
             docstring_style: google
+            show_source: true
+            show_root_heading: true
+            show_object_full_path: false
+            show_category_heading: true
+            show_bases: true
+            heading_level: 2
 
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
@@ -54,6 +62,11 @@ markdown_extensions:
   - tables
   - toc:
       permalink: true
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 nav:
   - Home: index.md
@@ -70,4 +83,11 @@ nav:
     - Errors: api/errors.md
   - Development:
     - Contributing: contributing.md
-    - Changelog: changelog.md 
+    - Changelog: changelog.md
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/lmousom/hyperhttp
+  version:
+    provider: mike 
