--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ disallow_incomplete_defs = true
 addopts = "--cov=hyperhttp --cov-report=term-missing --cov-report=html"
 testpaths = ["tests"]
 asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.coverage.run]
 branch = true
