--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
     
     - name: Run tests
       run: |
-        pytest tests/ --cov=hyperhttp --cov-report=xml
+        pytest --cov --cov-branch --cov-report=xml
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
